--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <ul class="social-links">
                 <li><a href="https://github.com/DarkidOP" target="_blank"><i class='bx bxl-github' ></i></a></li>
                 <li><a href="https://discord.com/users/522340125380706314" target="_blank"><i class='bx bxl-discord-alt' ></i></a></li>
-                
+                <li><a href="https://darkid.otakulink.net/" target="_blank"><i class='bx bx-world'></i></i></a></li>
                 <li><a href="https://www.instagram.com/darkidop/" target="_blank"><i class='bx bxl-instagram' ></i></a></li>
             </ul>
         </div>
