main page updated and readme add

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 <body>
     <main for="frontend mentor challenge projects by darkidop">
         <div class="heading">
-            <a href="https://darkidop.github.io/FrontendMentor/"></a>
-            <h1>Darkidop/<span>FrontendMentor</span></h1>
-            <p>challenge projects</p>
+            <div class="heading-item-1">
+                <h1>Darkidop/<span>FrontendMentor</span></h1>
+                <p>challenge projects</p>
+            </div>
+            <div class="heading-item-2">
+                <a class="git-repo" target="_blank" href="https://github.com/DarkidOP/FrontendMentor"><i class='bx bxs-book-bookmark'></i> | git-repo</a>
+            </div>
+
         </div>
         <ol class="project-list">
             <li><a href="https://darkidop.github.io/FrontendMentor/qr-code-component-main/" target="__blank">qr-code-component</a></li>
